--- a/Implementation/WebShopUI/WebShopUI/App/views/signIn.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/signIn.html
@@ -21,7 +21,7 @@
                                         </div>
                                         <div class="control-group">
                                             <!-- Username -->
-                                            <label class="control-label" for="username">Username</label>
+                                            <label class="control-label" for="username">User</label>
                                             <div class="controls">
                                                 <input type="text" id="username" name="username" placeholder="" class="input-xlarge">
                                             </div>
@@ -69,7 +69,7 @@
             </div>
         </div>
     </div>
-
+</div>
 
     <!--<div class="container">
         <div class="row">
