--- a/Implementation/WebShopUI/WebShopUI/App/views/shell.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/shell.html
@@ -24,7 +24,7 @@
 
 
             <!--User Profile-->
-            <p data-bind="visible: user.authenticated" class="navbar-text navbar-right">Signed in as UserName</p>
+            <p data-bind="visible: user.authenticated" class="navbar-text navbar-right">Signed in as <span data-bind="text: user.userName"></span></p>
             <ul data-bind="visible: user.authenticated" class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -141,11 +141,13 @@
                 </a>
             </li>
 
+
+
             <!-- ko foreach: activeType.subTypes -->
 
             <li class="">
-                <a href="#">
-
+                <a data-bind="attr: { href: hash }">
+                    <!--<span data-bind="text: hash"></span>-->
                     <span class="glyphicon glyphicon-wrench" data-bind="click: $root.modifyType"></span>
                     <span class="glyphicon glyphicon-remove" data-bind="click: $root.deleteType"></span>
 
