--- a/Implementation/WebShopUI/WebShopUI/App/views/product.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/product.html
@@ -1,4 +1,42 @@
-﻿<div>
+﻿<!-- Start: Product description -->
+<div class="article" data-bind="with: product">
+    <div class="row bottom-space">
+        <div class="span12">
+            <div class="page-header">
+                <h1 data-bind="text: productName"></h1>
+            </div>
+        </div>
+        <div class="span12 center-align">
+            <img class="thumbnail product-snap" data-bind="attr: {alt: caption, src: largeImg}" />
+        </div>
+    </div>
+    <div class="row">
+        <div class="span10 offset1">
+            <blockquote>creatted by: <span data-bind="text: creator"></span></blockquote>
+            
+            <blockquote data-bind="text: description"></blockquote>
 
+            <div class="span8 offset1">
+                <h3>Fetures of <span data-bind="text: productName"></span></h3>
+                <ul class="features" data-bind="foreach: features">
+                    <li>
+                        <span class="glyphicon glyphicon-ok"></span> <strong data-bind="text: $data"></strong>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="span10 offset1">
+            <hr>
+            <div class="span3">
+                <p>
+                    Ready to start the innovation?
+                </p>
+                <a class="btn btn-primary" href="#">Add To Chart</a>
+            </div>
 
+        </div>
+    </div>
 </div>
+<!-- End: Product description -->
