menűjavít; business logic szeparál

--- a/Implementation/WebShopUI/WebShopUI/App/views/shell.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/shell.html
@@ -2,15 +2,16 @@
 <div data-bind="compose:'viewmodels/mainmenu'"></div>
 
 <!--Breadcrumbs-->
-<div data-bind="compose:'viewmodels/breadcrumb'"></div>
+<!--<div data-bind="compose:'viewmodels/breadcrumb'"></div>-->
 
 <div class="container-fluid page-host">
     <!--Sidebar Pills Menu-->
-    <div data-bind="compose:'viewmodels/sidemenu'"></div>
+    <!--<div data-bind="compose:'viewmodels/sidemenu'"></div>-->
 
     <!--Content-->
-    <div class="col-md-9" data-bind="router: { transition:'entrance', cacheViews:false, preserveContext:true }">
+    <div class="col-md-9" data-bind="router: { transition:'entrance', cacheViews:false }">
 
     </div>
+
 
 </div>
