MainMenu navigáció kész

--- a/Implementation/WebShopUI/WebShopUI/App/views/shell.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/shell.html
@@ -6,7 +6,7 @@
 
 <div class="container-fluid page-host">
     <!--Sidebar Pills Menu-->
-    <!--<div data-bind="compose:'viewmodels/sidemenu'"></div>-->
+    <div data-bind="compose:'viewmodels/sidemenu'"></div>
 
     <!--Content-->
     <div class="col-md-9" data-bind="router: { transition:'entrance', cacheViews:false }">
