--- a/Implementation/WebShopUI/WebShopUI/App/views/mainmenu.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/mainmenu.html
@@ -1,4 +1,5 @@
-﻿<nav class="navbar navbar-inverse navbar-static-top container-fluid" role="navigation">
+﻿<div>
+<nav class="navbar navbar-inverse navbar-static-top container-fluid" role="navigation">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -115,5 +116,7 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+afsdg
+<span data-bind="text: router.activeInstruction().config.title"></span>
+</div>
 
-<!--<h1 data-bind="text: router.activeInstruction().config.title"></h1>-->
