--- a/Implementation/WebShopUI/WebShopUI/App/views/mainmenu.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/mainmenu.html
@@ -1,5 +1,4 @@
-﻿<div>
-<nav class="navbar navbar-inverse navbar-static-top container-fluid" role="navigation">
+﻿<nav class="navbar navbar-inverse navbar-static-top container-fluid" role="navigation">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -116,7 +115,5 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-afsdg
-<span data-bind="text: router.activeInstruction().config.title"></span>
-</div>
+<!--afsdg <span data-bind="text: router.activeInstruction().config.title"></span>-->
 
