--- a/Implementation/WebShopUI/WebShopUI/App/views/shell.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/shell.html
@@ -2,7 +2,7 @@
 <div data-bind="compose:'viewmodels/mainmenu'"></div>
 
 <!--Breadcrumbs-->
-<!--<div data-bind="compose:'viewmodels/breadcrumb'"></div>-->
+<div data-bind="compose:'viewmodels/breadcrumb'"></div>
 
 <div class="container-fluid page-host">
     <!--Sidebar Pills Menu-->
