--- a/Implementation/WebShopUI/WebShopUI/App/views/products.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/products.html
@@ -1,36 +1,37 @@
-﻿
-<h1 data-bind="text: displayName"></h1>
+﻿<div>
 
-<button data-bind="visible: isTestMode, click: generateTestProducts">genTesztProducts</button>
-
-
-<div data-bind="foreach: Products">
-
-    <div class="col-sm-6 col-md-3">
-
-        <div class="col-sm-3 col-md-2" style="min-width:200px;">
-            <a href="#" class="thumbnail" data-bind="attr: { href: URLPath }">
-                
-                <img src="" alt="" data-bind="attr: {src: smallImg, alt: caption}" style="display: block;" />
-            </a>
-        </div>
-
-        <div class="col-sm-3 col-md-2">
-            <div class="caption">
-                <h3 data-bind="text: productName">Product Name</h3>
-
-                <div data-bind="text: caption"></div>
-
-                <span data-bind="text: displayPrice"></span>:
-                <span data-bind="text: price"></span> <br />
-
-                <span data-bind="text: displayDiscountPrice"></span>:
-                <strong data-bind="text: discountPrice"></strong>
+    <button data-bind="visible: isTestMode, click: generateTestProducts">genTesztProducts</button>
+    <h1 data-bind="text: displayName"></h1>
 
 
-                <p>
-                    <a href="#" class="btn btn-primary" role="button" data-bind="text: $parent.displayToCart, click: $parent.addToChart"></a>
-                </p>
+    <!-- Products - thumbnails -->
+    <div data-bind="foreach: Products">
+
+        <div class="col-sm-6 col-md-3">
+
+            <div class="col-sm-3 col-md-2" style="min-width:200px;">
+                <a href="#" class="thumbnail" data-bind="attr: { href: URLPath }">
+                    <img src="" alt="" data-bind="attr: {src: smallImg, alt: caption}" style="display: block;" />
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-md-2">
+                <div class="caption">
+                    <h3 data-bind="text: productName">Product Name</h3>
+
+                    <div data-bind="text: caption"></div>
+
+                    <span data-bind="text: displayPrice"></span>:
+                    <span data-bind="text: price"></span> <br />
+
+                    <span data-bind="text: displayDiscountPrice"></span>:
+                    <strong data-bind="text: discountPrice"></strong>
+
+
+                    <p>
+                        <a href="#" class="btn btn-primary" role="button" data-bind="text: $parent.displayToCart, click: $parent.addToChart"></a>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
