404 view; cart view; shopping status bar

--- a/Implementation/WebShopUI/WebShopUI/App/views/products.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/products.html
@@ -11,7 +11,7 @@
 
             <div class="col-sm-3 col-md-2" style="min-width:200px;">
                 <a href="#" class="thumbnail" data-bind="attr: { href: URLPath }">
-                    <img src="" alt="" data-bind="attr: {src: smallImg, alt: caption}" style="display: block;" />
+                    <img src="" alt="" data-bind="attr: {src: smallImg, alt: caption}" class="img-responsive img-rounded" />
                 </a>
             </div>
 
