--- a/Implementation/WebShopUI/WebShopUI/App/views/mainmenu.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/mainmenu.html
@@ -59,12 +59,12 @@
                     <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
                     <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0;">
                         <form method="post" action="login" accept-charset="UTF-8">
-                            <input style="margin-bottom: 15px;" type="text" placeholder="Username" id="username" name="username">
-                            <input style="margin-bottom: 15px;" type="password" placeholder="Password" id="password" name="password">
-                            <input style="float: left; margin-right: 10px;" type="checkbox" name="remember-me" id="remember-me" value="1">
+                            <input class="input-sm" style="margin-bottom: 10px;" type="text" placeholder="Username" id="username" name="username" />
+                            <input class="input-sm" style="margin-bottom: 10px;" type="password" placeholder="Password" id="password" name="password" />
+                            <input style="float: left; margin-right: 10px;" type="checkbox" name="remember-me" id="remember-me" value="1" />
                             <label for="user_remember_me"> Remember me</label>
-                            <input class="btn btn-primary btn-block" type="submit" id="sign-in" value="Sign In">
-                            <label style="text-align:center;margin-top:5px"></label>
+                            <input class="btn btn-success btn-block" type="submit" id="sign-in" value="Sign In" />
+                            <label style="text-align:center; margin-top:5px"></label>
                         </form>
                     </div>
                 </li>
@@ -80,7 +80,7 @@
                         Cart <span class="glyphicon glyphicon-shopping-cart"></span><b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">View Cart</a></li>
+                        <li><a href="#Cart">View Cart</a></li>
                         <li><a href="#">Add Product to Cart</a></li>
                         <li><a href="#">Checkout Cart and Payment</a></li>
                         <li class="divider"></li>
@@ -116,4 +116,3 @@
     </div><!-- /.container-fluid -->
 </nav>
 <!--afsdg <span data-bind="text: router.activeInstruction().config.title"></span>-->
-
