--- a/Implementation/WebShopUI/WebShopUI/App/views/product.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/product.html
@@ -7,7 +7,7 @@
             </div>
         </div>
         <div class="span12 center-align">
-            <img class="thumbnail product-snap" data-bind="attr: {alt: caption, src: largeImg}" />
+            <img class="thumbnail img-responsive" data-bind="attr: {alt: caption, src: largeImg}" />
         </div>
     </div>
     <div class="row">
