--- a/Implementation/WebShopUI/WebShopUI/App/views/sidemenu.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/sidemenu.html
@@ -1,15 +1,15 @@
-﻿<div class="col-md-3" data-bind="if: activeType">
+﻿<div class="col-md-3" >
     <!--display:none/block bindingolható lesz, ha valamelyik aloldal rejtené-->
     <ul class="nav nav-pills nav-stacked">
         <li class="">
             <a href="#">
                 <span class="glyphicon glyphicon-chevron-left"></span>
-                <span data-bind="text: activeType.parentType.typeName"></span>
+                <span data-bind="text: parentTypeName, attr: { href: parentTypeHash }"></span>
             </a>
         </li>
 
         <li class="active">
-            <a href="#" data-bind="text: activeType.typeName"></a>
+            <a href="#" data-bind="text: activeTypeName, attr: { href:  activeTypeHash }"></a>
         </li>
 
         <li>
@@ -19,7 +19,7 @@
         </li>
 
 
-        <!-- ko foreach: activeType.subTypes -->
+        <!-- ko foreach: childTypes -->
 
         <li class="">
             <a data-bind="attr: { href: hash }">
