--- a/Implementation/WebShopUI/WebShopUI/App/views/shoppingProcessStatus.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/shoppingProcessStatus.html
@@ -1,15 +1,15 @@
 ﻿<div class="stepwizard">
     <div class="stepwizard-row">
         <div class="stepwizard-step">
-            <button type="button" class="btn btn-default btn-circle">1</button>
+            <button data-bind="enable: Cart_en" type="button" class="btn btn-primary btn-circle">1</button>
             <p>Cart</p>
         </div>
         <div class="stepwizard-step">
-            <button type="button" class="btn btn-primary btn-circle">2</button>
-            <p>Shipping</p>
+            <button data-bind="enable: Ordering_en" type="button" class="btn btn-default btn-circle">2</button>
+            <p>Ordering</p>
         </div>
         <div class="stepwizard-step">
-            <button type="button" class="btn btn-default btn-circle" disabled="disabled">3</button>
+            <button data-bind="enable: Payment_en" type="button" class="btn btn-default btn-circle">3</button>
             <p>Payment</p>
         </div> 
     </div>
