--- a/Implementation/WebShopUI/WebShopUI/App/views/signIn.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/signIn.html
@@ -1,126 +1,126 @@
 ﻿<div class="modal-content">
-        <br>
-        <div class="bs-example bs-example-tabs">
-            <ul id="myTab" class="nav nav-tabs">
-              <li class="active"><a href="#signin" data-toggle="tab">Sign In</a></li>
-              <li class=""><a href="#signup" data-toggle="tab">Register</a></li>
-              <li class=""><a href="#why" data-toggle="tab">Why?</a></li>
-            </ul>
-        </div>
-      <div class="modal-body">
+    <br>
+    <div class="bs-example bs-example-tabs">
+        <ul id="myTab" class="nav nav-tabs">
+            <li class=""><a href="#signin" data-toggle="tab">Sign In</a></li>
+            <li class="active"><a href="#signup" data-toggle="tab">Register</a></li>
+            <li class=""><a href="#why" data-toggle="tab">Why?</a></li>
+        </ul>
+    </div>
+    <div class="modal-body">
         <div id="myTabContent" class="tab-content">
-        <div class="tab-pane fade in" id="why">
-        <p>We need this information so that you can receive access to the site and its content. Rest assured your information will not be sold, traded, or given to anyone.</p>
-        <p></p><br> Please contact <a mailto:href="JoeSixPack@Sixpacksrus.com"></a>JoeSixPack@Sixpacksrus.com for any other inquiries.<p></p>
+            <div class="tab-pane fade in" id="why">
+                <p>We need this information so that you can receive access to the site and its content. Rest assured your information will not be sold, traded, or given to anyone.</p>
+                <p></p><br> Please contact <a mailto:href="JoeSixPack@Sixpacksrus.com"></a>JoeSixPack@Sixpacksrus.com for any other inquiries.<p></p>
+            </div>
+            <div class="tab-pane fade" id="signin">
+                <form class="form-horizontal">
+                    <fieldset>
+                        <!-- Sign In Form -->
+                        <!-- Text input-->
+                        <div class="control-group">
+                            <label class="control-label" for="userid">Alias:</label>
+                            <div class="controls">
+                                <input required="" id="userid" name="userid" type="text" class="form-control" placeholder="JoeSixpack">
+                            </div>
+                        </div>
+
+                        <!-- Password input-->
+                        <div class="control-group">
+                            <label class="control-label" for="passwordinput">Password:</label>
+                            <div class="controls">
+                                <input required="" id="passwordinput" name="passwordinput" class="form-control" type="password" placeholder="********">
+                            </div>
+                        </div>
+
+                        <!-- Multiple Checkboxes (inline) -->
+                        <div class="control-group">
+                            <label class="control-label" for="rememberme"></label>
+                            <div class="controls">
+                                <label class="checkbox inline" for="rememberme-0">
+                                    <input type="checkbox" name="rememberme" id="rememberme-0" value="Remember me">
+                                    Remember me
+                                </label>
+                            </div>
+                        </div>
+
+                        <!-- Button -->
+                        <div class="control-group">
+                            <label class="control-label" for="signin"></label>
+                            <div class="controls">
+                                <button id="signin" name="signin" class="btn btn-success">Sign In</button>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+            <div class="tab-pane fade active in" id="signup">
+                <form class="form-horizontal">
+                    <fieldset>
+                        <!-- Sign Up Form -->
+                        <!-- Text input-->
+                        <div class="control-group">
+                            <label class="control-label" for="Email">Email:</label>
+                            <div class="controls">
+                                <input id="Email" name="Email" class="form-control" type="text" placeholder="JoeSixpack@sixpacksrus.com" required="">
+                            </div>
+                        </div>
+
+                        <!-- Text input-->
+                        <div class="control-group">
+                            <label class="control-label" for="userid">Alias:</label>
+                            <div class="controls">
+                                <input id="userid" name="userid" class="form-control" type="text" placeholder="JoeSixpack" required="">
+                            </div>
+                        </div>
+
+                        <!-- Password input-->
+                        <div class="control-group">
+                            <label class="control-label" for="password">Password:</label>
+                            <div class="controls">
+                                <input id="password" name="password" class="form-control" type="password" placeholder="********" required="">
+                                <em>1-8 Characters</em>
+                            </div>
+                        </div>
+
+                        <!-- Text input-->
+                        <div class="control-group">
+                            <label class="control-label" for="reenterpassword">Re-Enter Password:</label>
+                            <div class="controls">
+                                <input id="reenterpassword" class="form-control" name="reenterpassword" type="password" placeholder="********" required="">
+                            </div>
+                        </div>
+
+                        <!-- Multiple Radios (inline) -->
+                        <br>
+                        <div class="control-group">
+                            <label class="control-label" for="humancheck">Humanity Check:</label>
+                            <div class="controls">
+                                <label class="radio inline" for="humancheck-0">
+                                    <input type="radio" name="humancheck" id="humancheck-0" value="robot" checked="checked">I'm a Robot
+                                </label>
+                                <label class="radio inline" for="humancheck-1">
+                                    <input type="radio" name="humancheck" id="humancheck-1" value="human">I'm Human
+                                </label>
+                            </div>
+                        </div>
+
+                        <!-- Button -->
+                        <div class="control-group">
+                            <label class="control-label" for="confirmsignup"></label>
+                            <div class="controls">
+                                <button id="confirmsignup" name="confirmsignup" class="btn btn-success">Sign Up</button>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
         </div>
-        <div class="tab-pane fade active in" id="signin">
-            <form class="form-horizontal">
-            <fieldset>
-            <!-- Sign In Form -->
-            <!-- Text input-->
-            <div class="control-group">
-              <label class="control-label" for="userid">Alias:</label>
-              <div class="controls">
-                <input required="" id="userid" name="userid" type="text" class="form-control" placeholder="JoeSixpack">
-              </div>
-            </div>
-
-            <!-- Password input-->
-            <div class="control-group">
-              <label class="control-label" for="passwordinput">Password:</label>
-              <div class="controls">
-                <input required="" id="passwordinput" name="passwordinput" class="form-control" type="password" placeholder="********">
-              </div>
-            </div>
-
-            <!-- Multiple Checkboxes (inline) -->
-            <div class="control-group">
-              <label class="control-label" for="rememberme"></label>
-              <div class="controls">
-                <label class="checkbox inline" for="rememberme-0">
-                  <input type="checkbox" name="rememberme" id="rememberme-0" value="Remember me">
-                  Remember me
-                </label>
-              </div>
-            </div>
-
-            <!-- Button -->
-            <div class="control-group">
-              <label class="control-label" for="signin"></label>
-              <div class="controls">
-                <button id="signin" name="signin" class="btn btn-success">Sign In</button>
-              </div>
-            </div>
-            </fieldset>
-            </form>
-        </div>
-        <div class="tab-pane fade" id="signup">
-            <form class="form-horizontal">
-            <fieldset>
-            <!-- Sign Up Form -->
-            <!-- Text input-->
-            <div class="control-group">
-              <label class="control-label" for="Email">Email:</label>
-              <div class="controls">
-                <input id="Email" name="Email" class="form-control" type="text" placeholder="JoeSixpack@sixpacksrus.com" required="">
-              </div>
-            </div>
-            
-            <!-- Text input-->
-            <div class="control-group">
-              <label class="control-label" for="userid">Alias:</label>
-              <div class="controls">
-                <input id="userid" name="userid" class="form-control" type="text" placeholder="JoeSixpack" required="">
-              </div>
-            </div>
-            
-            <!-- Password input-->
-            <div class="control-group">
-              <label class="control-label" for="password">Password:</label>
-              <div class="controls">
-                <input id="password" name="password" class="form-control" type="password" placeholder="********" required="">
-                <em>1-8 Characters</em>
-              </div>
-            </div>
-            
-            <!-- Text input-->
-            <div class="control-group">
-              <label class="control-label" for="reenterpassword">Re-Enter Password:</label>
-              <div class="controls">
-                <input id="reenterpassword" class="form-control" name="reenterpassword" type="password" placeholder="********" required="">
-              </div>
-            </div>
-            
-            <!-- Multiple Radios (inline) -->
-            <br>
-            <div class="control-group">
-              <label class="control-label" for="humancheck">Humanity Check:</label>
-              <div class="controls">
-                <label class="radio inline" for="humancheck-0">
-                  <input type="radio" name="humancheck" id="humancheck-0" value="robot" checked="checked">I'm a Robot</label>
-                <label class="radio inline" for="humancheck-1">
-                  <input type="radio" name="humancheck" id="humancheck-1" value="human">I'm Human</label>
-              </div>
-            </div>
-            
-            <!-- Button -->
-            <div class="control-group">
-              <label class="control-label" for="confirmsignup"></label>
-              <div class="controls">
-                <button id="confirmsignup" name="confirmsignup" class="btn btn-success">Sign Up</button>
-              </div>
-            </div>
-            </fieldset>
-            </form>
-      </div>
     </div>
-      </div>
-      <div class="modal-footer">
-      <center>
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </center>
-      </div>
+    <div class="modal-footer">
+
     </div>
+</div>
 
 
 <!--<div class="container">
@@ -146,14 +146,14 @@
                                         </div>
                                         <div class="control-group">
                                             <!-- Username -->
-  <!--                                          <label class="control-label" for="username">User</label>
-                                            <div class="controls">
-                                                <input type="text" id="username" name="username" placeholder="" class="input-xlarge">
-                                            </div>
-                                        </div>
+<!--                                          <label class="control-label" for="username">User</label>
+                                          <div class="controls">
+                                              <input type="text" id="username" name="username" placeholder="" class="input-xlarge">
+                                          </div>
+                                      </div>
 
-                                        <div class="control-group">
-                                            <!-- Password-->
+                                      <div class="control-group">
+                                          <!-- Password-->
 <!--                                            <label class="control-label" for="password">Password</label>
                                             <div class="controls">
                                                 <input type="password" id="password" name="password" placeholder="" class="input-xlarge">
@@ -162,8 +162,8 @@
 
 
                                         <div class="control-group">-->
-                                            <!-- Button -->
-                                          <!--  <div class="controls">
+<!-- Button -->
+<!--  <div class="controls">
                                                 <button class="btn btn-success">Login</button>
                                             </div>
                                         </div>
@@ -196,38 +196,37 @@
     </div>
 </div>
 -->
-    <!--<div class="container">
-        <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Please sign in</h3>
-                    </div>
-                    <div class="panel-body">
-                        <form accept-charset="UTF-8" role="form">
-                            <fieldset>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="E-mail" name="email" type="text">
-                                </div>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="Password" name="password" type="password" value="">
-                                </div>
-                                <div class="checkbox">
-                                    <label>
-                                        <input name="remember" type="checkbox" value="Remember Me"> Remember Me
-                                    </label>
-                                </div>
-                                <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login">
+<!--<div class="container">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Please sign in</h3>
+                </div>
+                <div class="panel-body">
+                    <form accept-charset="UTF-8" role="form">
+                        <fieldset>
+                            <div class="form-group">
+                                <input class="form-control" placeholder="E-mail" name="email" type="text">
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input name="remember" type="checkbox" value="Remember Me"> Remember Me
+                                </label>
+                            </div>
+                            <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login">
 
-                                <div style="margin:5px;">
-                                    Not Registered?
-                                    <a style="margin:5px;">Register here</a>
-                                </div>
-                            </fieldset>
-                        </form>
-                    </div>
+                            <div style="margin:5px;">
+                                Not Registered?
+                                <a style="margin:5px;">Register here</a>
+                            </div>
+                        </fieldset>
+                    </form>
                 </div>
             </div>
         </div>
-    </div>-->
-
+    </div>
+</div>-->
