--- a/Implementation/WebShopUI/WebShopUI/App/views/profile/billing_address.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/profile/billing_address.html
@@ -1,46 +1,53 @@
 ﻿<form class="form-horizontal">
-<fieldset>
+    <fieldset>
 
-<!-- Form Name -->
-<legend>Számlázási cím</legend>
+        <!-- Form Name -->
+        <legend>Számlázási cím</legend>
 
-<!-- Select Basic -->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="">Ország</label>
-  <div class="col-md-4">
-    <select id="" name="" class="form-control">
-      <option value="1">Magyarország</option>
-      <option value="2">Olaszország</option>
-    </select>
-  </div>
-</div>
+       <!-- Select Basic -->
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="">Ország</label>
+            <div class="col-md-4">
+                <select data-bind="options: availableCountries, value: selectedCountry" class="form-control"></select>
+            </div>
+        </div>
 
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="">Város</label>  
-  <div class="col-md-4">
-  <input id="" name="" placeholder="Város" class="form-control input-md" required="" type="text">
-  <span class="help-block">Itt adhatja meg azt a várost, ahol lakik</span>  
-  </div>
-</div>
+        <!-- Text input-->
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="">Város</label>
+            <div class="col-md-4">
+                <input data-bind="value: city" placeholder="Város" class="form-control input-md" required="" type="text">
+                <span class="help-block">Itt adhatja meg azt a várost, ahol lakik</span>
+            </div>
+        </div>
 
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="">Irányítószám</label>  
-  <div class="col-md-4">
-  <input id="" name="" placeholder="1111" class="form-control input-md" required="" type="text">
-  <span class="help-block">Itt adhatja meg az irányítószámát</span>  
-  </div>
-</div>
+        <!-- Text input-->
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="">Irányítószám</label>
+            <div class="col-md-4">
+                <input data-bind="value: zip_code" placeholder="1111" class="form-control input-md" required="" type="text">
+                <span class="help-block">Itt adhatja meg az irányítószámát</span>
+            </div>
+        </div>
 
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="">Cím (utca, házszám)</label>  
-  <div class="col-md-4">
-  <input id="" name="" placeholder="Alma u. 80." class="form-control input-md" type="text">
-  <span class="help-block">Itt adhatja meg az utcáját, és házszámát</span>  
-  </div>
-</div>
+        <!-- Text input-->
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="">Cím (utca, házszám)</label>
+            <div class="col-md-4">
+                <input data-bind="value: road_num" placeholder="Alma u. 80." class="form-control input-md" type="text">
+                <span class="help-block">Itt adhatja meg az utcáját, és házszámát</span>
+            </div>
+        </div>
 
-</fieldset>
+        
+        <!-- Button (Double) -->
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="button1id">Save Changes</label>
+            <div class="col-md-8">
+                <button data-bind="click: saveChanges" class="btn btn-info">Save Changes</button>
+                <button data-bind="click: cancelChanges" class="btn btn-danger">Cancel Changes</button>
+            </div>
+        </div>
+
+    </fieldset>
 </form>
