--- a/Implementation/WebShopUI/WebShopUI/App/views/products.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/products.html
@@ -34,5 +34,20 @@
                 </div>
             </div>
         </div>
+
+
+        <!--<div class="col-md-2 col-sm-3 column productbox">
+
+            <img data-bind="attr: {src: smallImg, alt: caption}" class="img-responsive img-rounded" />
+
+            <div class="producttitle" data-bind="text: productName" >Product Name</div>
+            <div class="productprice">
+                <div class="pull-right">
+                    <a href="#" class="btn btn-primary" role="button" data-bind="text: $parent.displayToCart, click: $parent.addToChart"></a>
+                </div>
+                <div class="pricetext">£8.95</div>
+            </div>
+        </div>-->
+
     </div>
 </div>
