--- a/Implementation/WebShopUI/WebShopUI/App/views/shell.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/shell.html
@@ -1,12 +1,12 @@
 ﻿<!--Main Navigation-->
-<div data-bind="compose:'viewmodels/mainmenu'"></div>
+<div data-bind="compose:'viewmodels/navigation/mainmenu'"></div>
 
 <!--Breadcrumbs-->
-<div data-bind="compose:'viewmodels/breadcrumb'"></div>
+<div data-bind="compose:'viewmodels/navigation/breadcrumb'"></div>
 
 <div class="container-fluid page-host">
     <!--Sidebar Pills Menu-->
-    <div data-bind="compose:'viewmodels/sidemenu'"></div>
+    <div data-bind="compose:'viewmodels/navigation/sidemenu'"></div>
 
     <!--Content-->
     <div class="col-md-9" data-bind="router: { transition:'entrance', cacheViews:false }">
