--- a/Implementation/WebShopUI/WebShopUI/App/views/ordering/ordering.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/ordering/ordering.html
@@ -7,14 +7,36 @@
         <hr />
         <div class="row">
             <div data-bind="text: productName" class="col-md-4"></div>
-            
+
             <div data-bind="text: discountPrice" class="col-md-4"></div>
         </div>
         <hr />
 
     </div>
 
+    <table class="table table-striped table-responsive">
+        <thead>
+                <tr>
+                    <th>
+                        Product Name
+                    </th>
 
+                    <th>
+
+                    </th>
+
+                    <th>
+
+                    </th>
+                </tr>
+            
+        </thead>
+        
+        <tbody>
+
+        </tbody>
+    </table>
+    
     <!-- Preferred Delivery -->
     <!-- Delivery Address -->
     <!-- Billing Address -->
