local storage (amplify)

--- a/Implementation/WebShopUI/WebShopUI/App/views/products.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/products.html
@@ -7,7 +7,7 @@
     <!-- Products - thumbnails -->
     <div data-bind="foreach: Products">
 
-        <div class="col-sm-6 col-md-3">
+        <div class="col-sm-6 col-md-4">
 
             <div class="col-sm-3 col-md-2" style="min-width:200px;">
                 <a href="#" class="thumbnail" data-bind="attr: { href: URLPath }">
@@ -15,7 +15,7 @@
                 </a>
             </div>
 
-            <div class="col-sm-3 col-md-2">
+            <div class="col-sm-3 col-md-2" style="min-width:150px;" >
                 <div class="caption">
                     <h3 data-bind="text: productName">Product Name</h3>
 
