--- a/Implementation/WebShopUI/WebShopUI/App/views/profile/prefered_delivery.html
+++ b/Implementation/WebShopUI/WebShopUI/App/views/profile/prefered_delivery.html
@@ -4,7 +4,7 @@
         <!-- Form Name -->
         <legend>Átvétel adatok</legend>
 
-        <!-- Multiple Radios -->
+        <!-- Delivery Type Radios -->
         <div class="form-group">
             <label class="col-md-4 control-label" for="szem_atv">Szállítás módja</label>
             <div class="col-md-4">
@@ -23,8 +23,16 @@
             </div>
         </div>
 
-        <!-- Select Basic -->
-        <div class="form-group" >
+        <!-- Price Of Shipping -->
+        <div  data-bind="visible: delivery_method() == 'shipping'" class="form-group">
+            <label class="col-md-4 control-label" for="">Price of shipping: </label>
+            <div class="col-md-5">
+                <input data-bind="value: delivery_price" class="form-control" disabled="disabled" />
+            </div>
+        </div>
+
+        <!-- Store Selector -->
+        <div class="form-group">
             <label class="col-md-4 control-label" for="">Szállítás helye</label>
             <div class="col-md-5">
                 <select data-bind="options: avaibleStores, value: selectedStore, enable: delivery_method() == 'personal'" class="form-control"></select>
