Test Project Kezdve; Before WebApi update

--- a/Implementation/WebShop/WebShop/Views/Shared/_Layout.cshtml
+++ b/Implementation/WebShop/WebShop/Views/Shared/_Layout.cshtml
@@ -19,6 +19,8 @@
     <link href="Content/SiteLocal/ProcessStatus.css" rel="stylesheet" />
     <link href="Content/SiteLocal/SiteMain.css" rel="stylesheet" />
 
+    <link href="Content/toastr.min.css" rel="stylesheet" />
+
     @*@Styles.Render("~/Content/WebShopStyles")*@
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -43,7 +45,11 @@
 
     <script src="Scripts/jquery.csv-0.71.min.js"></script>
 
+
     <!--Lovas Istvan Core Helpers-->
+
+    <script src="~/App/busineslogic/ApiDefinitions.js"></script>
+
     @Scripts.Render("~/bundles/WebShopHelpers")
 
 
