--- a/Implementation/WebShop/WebShop/App/views/sign/MenuSigIn.html
+++ b/Implementation/WebShop/WebShop/App/views/sign/MenuSigIn.html
@@ -19,7 +19,7 @@
                             </label>
                         </div>
                         <div class="form-group">
-                            <button type="submit" data-bind="click: signIn" class="btn btn-success btn-block">Sign in</button>
+                            <button type="submit" data-bind="click: signIn, enable: buttonActive()" class="btn btn-success btn-block">Sign in</button>
                         </div>
                     </form>
                 </div>
