--- a/Implementation/WebShop/WebShop/App/views/sign/signIn.html
+++ b/Implementation/WebShop/WebShop/App/views/sign/signIn.html
@@ -32,7 +32,7 @@
         <div class="control-group">
             <label class="control-label" for="signin"></label>
             <div class="controls">
-                <button id="signin" name="signin" data-bind="click: signIn" class="btn btn-success">Sign In</button>
+                <button id="signin" name="signin" data-bind="click: signIn, enable: buttonActive()" class="btn btn-success">Sign In</button>
             </div>
         </div>
 
