--- a/Implementation/WebShop/WebShop/App/views/sign/signUp.html
+++ b/Implementation/WebShop/WebShop/App/views/sign/signUp.html
@@ -52,7 +52,7 @@
         <div class="control-group">
             <label class="control-label" for="confirmsignup"></label>
             <div class="controls">
-                <button data-bind="click: signUp" id="confirmsignup" name="confirmsignup" class="btn btn-success">Sign Up</button>
+                <button data-bind="click: signUp, enable: buttonActive()" id="confirmsignup" name="confirmsignup" class="btn btn-success">Sign Up</button>
             </div>
         </div>
     </fieldset>
