--- a/Implementation/WebShop/WebShop/Views/Shared/_Layout.cshtml
+++ b/Implementation/WebShop/WebShop/Views/Shared/_Layout.cshtml
@@ -58,5 +58,7 @@
 
     @RenderSection("scripts", required: false)
 
+    <script src="~/App/Tests/FastDebug/ControllersDebug.js"></script>
+
 </body>
 </html>
