--- a/Implementation/WebShop/WebShop/App/views/cart.html
+++ b/Implementation/WebShop/WebShop/App/views/cart.html
@@ -26,7 +26,7 @@
                     <!-- ko foreach: products -->
                     <div class="row">
                         <div class="col-xs-2">
-                            <a data-bind="attr: { href: URLPath }">
+                            <a data-bind="attr: { href: urlPath }">
                                 <img class="img-responsive" src="http://placehold.it/100x70">
                             </a>
                         </div>
