--- a/Implementation/WebShop/WebShop/App/views/navigation/mainmenu.html
+++ b/Implementation/WebShop/WebShop/App/views/navigation/mainmenu.html
@@ -89,7 +89,7 @@
                         <!-- ko foreach: cart_prods -->
                         <li>
 
-                            <a data-bind="attr: { href : URLPath }">
+                            <a data-bind="attr: { href : urlPath }">
                                 <span data-bind="text: productName">Kosármban lévő termék n.</span>
                             </a>
                         </li>
