--- a/Implementation/WebShop/WebShop/Views/Shared/_Layout.cshtml
+++ b/Implementation/WebShop/WebShop/Views/Shared/_Layout.cshtml
@@ -48,8 +48,10 @@
 
     <!--Lovas Istvan Core Helpers-->
 
+
     <script src="~/App/busineslogic/ApiDefinitions.js"></script>
 
+    <script src="~/App/busineslogic/fakeControllers.js"></script>
     @Scripts.Render("~/bundles/WebShopHelpers")
 
 
@@ -59,6 +61,7 @@
     @RenderSection("scripts", required: false)
 
     <script src="~/App/Tests/FastDebug/ControllersDebug.js"></script>
+
 
 </body>
 </html>
